// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBase Renders Correctly 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input"
        name="test"
        type="text"
        value="Input"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`InputBase Renders Correctly disabled 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input"
        data-testid="input"
        name="test"
        type="text"
        value="a"
      />
    </div>
  </form>
</DocumentFragment>
`;
